# deer-agents

./: .gitignore  .mcp.json  CLAUDE.md  HANDOFF.md  README.md  config.yaml  pyproject.toml
cli/: __main__.py  app.py  bootstrap.py  commands.py  renderer.py  sessions.py  shell.py
codeact/: __init__.py  code_act_tool.py  errors.py  namespace.py  prompt.py  sandbox.py
deer-flow/: config.example.yaml  config.yaml
docs/: oncall-knowledge-base-design.md  tool-orchestration.md
knowledge/: extractor.py  prompts.py  store.py
middlewares/: code_index.py  knowledge.py  mcp_overflow.py
pipelines/: __init__.py  errors.py  executor.py  loader.py  parser.py  registry.py  resolver.py  tool_factory.py
scripts/: dump_events.py  e2e_test.py  index_repo.py  run_eval.py  trace_inspector.py  trace_replay.py
summarization/: compression_strategies.py  smart_compression.py
tests/: test_code_index.py  test_codeact_e2e.py  test_codeact_namespace.py  test_codeact_sandbox.py  test_codeact_tool.py  test_commands.py  test_compression_archive.py  test_compression_strategies.py  test_config_merge.py  test_e2e_eval.py  test_eval_runner.py  test_eval_types.py  test_knowledge_extractor.py  test_knowledge_middleware.py  test_knowledge_store.py  test_mcp_overflow.py  test_pipeline_e2e.py  test_pipeline_executor.py  test_pipeline_loader.py  test_pipeline_parser.py  test_pipeline_registry.py  test_pipeline_resolver.py  test_pipeline_tool_factory.py  test_process_eval.py  test_schema_locator.py  test_sessions.py  test_smart_compression.py  test_tool_eval.py
tools/: schema_locator.py
(+43 files in other folders)
