[project]
name = "deer-agents"
version = "0.1.0"
description = "CLI agent system built on DeerFlow harness"
requires-python = ">=3.12"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
deer = "cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "middlewares"]
